--- a/hw1.html
+++ b/hw1.html
@@ -1,1 +1,200 @@
-hi
+<!DOCTYPE html>
+<html>
+<head>
+
+	<title>SUNIL_JAVAUI RESUME</title>
+</head>
+
+<body>
+		<h3 align="center">SUNIL</h3>
+		<h3 align="center">Email:sunilk6099@gmail.com</h3>
+		<h3 align="center">Phone: (510)-516-3453</h3>
+		<hr></hr>
+	<p><b>SUMMARY:</b></p>
+	<ul>
+		<li>7+ years of experience in developing Enterprise, Web-based and <b>SOA</b> based applications using <b>Java/J2EE</b> and Front-end technologies.</li>
+		<li>Have an extensive experience in developing web pages using <b>HTML5, CSS3, JavaScript, JQuery, AngularJS, NodeJS.</b></li>
+		<li>Experience and knowledge in various development methodologies like <b>AgileScrum, Test Driven Development</b>.</li>
+		<li>Experience in producing and consuming SOAP and RESTful Web Services using JAX-WS,JAX-RS, Jersey Framework and Spring MVC.</li>
+		<li>Proficient in using various design patterns such as MVC, Singleton, Service Locator, Session Facade, Factory Pattern and DAO</li>
+		<li>Experience using Java/J2EE & related technologies such as Hibernate, Spring, Servlets, JSP, JDBC, Java Beans, XML, XSL, SQL, PL/SQL.</li>
+		<li>Experienced in Responsive Web Design using CSS3Media Queries and Bootstrap.</li>
+		<li>Expertise in Closure, Context, Design patterns, hoisiting,Object Oriented Programming (OOP) in JavaScript.</li>
+		<li>Developed single page applications (SPA’s)  usingAngularJS, ReactJS and BackboneJS.</li>
+		<li>Extensive experience with Angular JS MVC framework including authoring complex directives, services, controllers and filters; working with animations, routing and states.</li>
+		<li>Very good Experience with writingAngularJS custom directives, $http, $q, factory, service filters.</li>
+		<li>Worked on npm modules like Grunt, bower,mongoDB, expressJS.</li>
+		<li>Developed the Web Appications using the MEAN Stack with MongoDB Express, Angular, Node.</li> 
+		<li>Extensive usedWeb/Application Servers like ApacheTomcat, JBOSS, Weblogic and Websphere</li>
+		<li>Experience in ExpressJS as the Web Framework and used Express as the middleware</li>
+		<li>Experience on Java Multi-Threading, Collection, Interfaces, Synchronization, and Exception Handling.</li>
+		<li>Good experience in writing SQL Queries, Stored Procedures, functions, packages, tables, views, triggers and data connectivity and data integration of Oracle.</li>
+		<li>Experience in using Version Control Systems like GIT and SVN.</li>
+		<li>Used Junit, JMockit framework for Unit testing.</li> 
+		<li>Worked on unit testing JavaScript with Jasmine and Karma.</li>
+		<li>Highly organized with the ability to prioritize work load, manage multiple projects and meet project deadlines by following project standards and procedures as per client specifications</li>
+		<li>Good interpersonal skills, excellent verbal, written and presentation skills and can work both independently and in a team.</li>
+
+	</ul>
+	<p><b>EDUCATIONAL DETAILS:</b></p>
+	<span>Bachelors in computer science,  Jawaharlal Nehru Technological University, India</span>
+	<p><b>TECHNICAL SKILLS:</b></p>
+	<table border="1px"; cellspacing="0px"; cellpadding="10px">
+	<tr>
+			<td>Programming Languages</td>
+			<td>Java/J2EE, C, C++, JavaScript, Shell Scripting.</td>
+	</tr>
+	<tr>
+		<td>Web/UI Technologies</td>
+		<td>HTML 4.0/5, CSS2/CSS3, JavaScript, AJAX, jQuery, JSON, jQuery UI, DOM, XML</td>
+	</tr>
+	<tr>
+		<td>Java Enterprise API</td>
+		<td>Servlets, JSP, JSF, EJB, JNDI, JMS, JDBC, Java Mail, Applets, RMI, Java Multithreading, Webservices, JAX-RPC</td>
+	</tr>
+	<tr>
+		<td>Frameworks</td>
+		<td>MVC, Struts, Spring, Hibernate, JPA, AngularJS, BackboneJS,NodeJS, Bootstrap</td>
+	</tr>
+	<tr>
+		<td>Databases</td>
+		<td>MySQL, PL/SQL, Oracle, SQL Server, IBM DB2, MongoDB, Stored Procedures</td>
+	</tr>
+	<tr>
+		<td>Software Engineering</td>
+		<td>Design Patterns, Object Oriented Methodologies, Service Oriented Architecture, Test Driven Development, Scrum and Agile  methodologies</td>
+	</tr>
+	<tr>
+		<td>Web/Application Servers</td>
+		<td>Apache Tomcat, JBoss , Weblogic, IBM Websphere</td>
+	</tr>
+	<tr>
+		<td>Operating Systems</td>
+		<td>Windows , Linux, UNIX, MS DOS</td>
+	</tr>
+	<tr>
+		<td>IDEs&Tools</td>
+		<td>JIRA, Maven, Eclipse, JDeveloper, NetBeans, JBuilder, JUnit, Log4j, Toad, MS Visio, Putty, WinSCP</td>
+	</tr>
+	<tr>
+		<td>Version Control</td>
+		<td>GIT, SVN, CVS</td>	
+	</tr>
+
+	</table>
+	<p><b>PROFESSIONAL EXPERIENCE:</b></p>
+	<span><b>Meijer Inc., Grand Rapids, MI&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Feb 2015 – Present</b></span>
+	<p><b>Senior J2EE / UI Developer</b></p>
+	<p>Meijer, Inc. is a regional American supercenter chain with its corporate headquarters in Grand Rapids, Michigan. It is one of the largest America’s private companies and operates a chain of hypermarkets, discount department stores and grocery stores</p>
+	<p><b>RESPONSIBILITES:</b></p>
+	<ul>
+		<li>Developed various product applications using Java/J2EE and Front end technologies.</li>
+		<li>Developed UI using HTML 5, Bootstrap, Jquery, and JSP for interactive cross browser functionality and complex user interface.</li>
+		<li>Involved in various phases of Software Development Life cycle (SDLC) of the application like requirement gathering, Design, Analysis and code development.</li>
+		<li>Integrating the front end UI to the back end using Spring MVC framework.</li>
+		<li>Used JQuery to select and manipulate HTML elements and also CSS manipulation.</li>
+		<li>Used JSTL and wrote custom Spring JSP tag libraries and implemented user based handling in JSP pages.</li>
+		<li>Used AJAX for asynchronously exchanging small amount of data with the server behind the scenes and updating the jsp page.</li>
+		<li>Spring framework is used to implement Inversion of Control (IOC) and Model View Controller (MVC).</li>
+		<li>Developed user management screens using AngularJS business components.</li>
+		<li>Worked extensively on Web Services (SOAP & REST), XML, JMS and Spring Controller.</li>
+		<li>Used AJAX (JQuery) to display data using asynchronous calls.</li>
+		<li>REST (JAX-RS) web services have been developed to be consumed by middleware module to push the communication center messages into web module.</li>
+		<li>Extensively used Java Collections framework for backend services and to display view on frontend.</li>
+		<li>Deploying, managing, and operating scalable, highly available, and fault tolerant systems on AWS.</li>
+		<li>Developed single page applications using AngularJS.</li>
+		<li>Developed reusable custom directives using AngularJS using transclude, restrict, event handlers and templating .</li>
+		<li>Leveraged two way data binding through scope in applications built on AngularJS.</li>
+		<li>Worked on Rest API calls and integrated with UI.</li>
+		<li>Used Bootstrap for Responsive Web design.</li>
+		<li>Used Grunt for build UI applications minification, watch for file changes for automated build, code quality check and CSS prefixers for cross browser compatibility.</li>
+		<li>Implemented mock services in node.JS with the help of modules using ExpressJS.</li>
+		<li>Used Junitframework for unit testing of application and Log4j to capture the logs.</li>
+		<li>Handled the back end operations using SQL, Stored procedures, triggers and developed the persistence structure using ORM based Hibernate.</li>
+		<li>Deployed web, presentation and business components on Apache Tomcat Application Server.</li>
+		<li>Followed Agile scrum methodology, involved in sprint planning, retros and code reviews.</li>
+	</ul>
+	<p><b>ENVIRONMENT:</b></p><span>Java/J2EE,Spring,Hibernate, JavaScript, AJAX, AngularJS,NodeJS, Grunt, Bootstrap, SOAP, REST, XML, JSON, MEAN Stack,Commons Lang, Log4j, Junit, JMockit,JDBC Template, MongoDB,  MVC, Eclipse,Linux</span>
+
+
+	<p><b>Ameriprise Auto and Home insurance, GreenBay, WI&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nov 2013 – Jan 2015</b></p>
+	<p><b>Java/J2EE & UI Developer</b></p>
+	<p>Ameriprise Auto & Home Insurance is an insurance company based in suburban Green Bay, Wisconsin. The company sells auto, home, condo, renters, umbrella (personal liability) and travel insurance. Partners include Costco Wholesale, Ford Motor Credit, Progressive Insurance and Ameriprise Financial.</p>
+	<p><b>RESPONSIBILITES:</b></p>
+	<ul>
+		<li>Developed various product applications using Java/J2EE and Front end technologies.</li>
+		<li>Developed UI using HTML 5, Bootstrap, Jquery, and JSP for interactive cross browser functionality and complex user interface.</li>
+		<li>Involved in various phases of Software Development Life cycle (SDLC) of the application like requirement gathering, Design, Analysis and code development.</li>
+		<li>Integrating the front end UI to the back end using Spring MVC framework.</li>
+		<li>Used JQuery to select and manipulate HTML elements and also CSS manipulation.</li>
+		<li>Used JSTL and wrote custom Spring JSP tag libraries and implemented user based handling in JSP pages.</li>
+		<li>Used AJAX for asynchronously exchanging small amount of data with the server behind the scenes and updating the jsp page.</li>
+		<li>Spring framework is used to implement Inversion of Control (IOC) and Model View Controller (MVC).</li>
+		<li>Developed user management screens using AngularJS business components.</li>
+		<li>Worked extensively on Web Services (SOAP & REST), XML, JMS and Spring Controller.</li>
+		<li>Used AJAX (JQuery) to display data using asynchronous calls.</li>
+		<li>REST (JAX-RS) web services have been developed to be consumed by middleware module to push the communication center messages into web module.</li>
+		<li>Extensively used Java Collections framework for backend services and to display view on frontend.</li>
+		<li>Deploying, managing, and operating scalable, highly available, and fault tolerant systems on AWS.</li>
+		<li>Developed single page applications using AngularJS.</li>
+		<li>Developed reusable custom directives using AngularJS using transclude, restrict, event handlers and templating .</li>
+		<li>Leveraged two way data binding through scope in applications built on AngularJS.</li>
+		<li>Worked on Rest API calls and integrated with UI.</li>
+		<li>Used Bootstrap for Responsive Web design.</li>
+		<li>Used Grunt for build UI applications minification, watch for file changes for automated build, code quality check and CSS prefixers for cross browser compatibility.</li>
+		<li>Implemented mock services in node.JS with the help of modules using ExpressJS.</li>
+		<li>Used Junitframework for unit testing of application and Log4j to capture the logs.</li>
+		<li>Handled the back end operations using SQL, Stored procedures, triggers and developed the persistence structure using ORM based Hibernate.</li>
+		<li>Deployed web, presentation and business components on Apache Tomcat Application Server.</li>
+		<li>Followed Agile scrum methodology, involved in sprint planning, retros and code reviews.</li>
+	</ul>
+	<p><b>ENVIRONMENT:</b></p><span>Java/J2EE,Spring,Hibernate, JavaScript, AJAX, AngularJS,NodeJS, Grunt, Bootstrap, SOAP, REST, XML, JSON, MEAN Stack,Commons Lang, Log4j, Junit, JMockit,JDBC Template, MongoDB,  MVC, Eclipse,Linux</span>
+	<p><b>North Houston Bank, TX&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dec 2011-Oct 2013</b></p>
+	<div><b>Java/J2EE Developer</b></div>
+	<p><b>RESPONSIBILITES:</b></p>
+	<ul>
+		<li>Developed various product applications using Java/J2EE and Front end technologies.</li>
+		<li>Developed UI using HTML 5, Bootstrap, Jquery, and JSP for interactive cross browser functionality and complex user interface.</li>
+		<li>Involved in various phases of Software Development Life cycle (SDLC) of the application like requirement gathering, Design, Analysis and code development.</li>
+		<li>Integrating the front end UI to the back end using Spring MVC framework.</li>
+		<li>Used JQuery to select and manipulate HTML elements and also CSS manipulation.</li>
+		<li>Used JSTL and wrote custom Spring JSP tag libraries and implemented user based handling in JSP pages.</li>
+		<li>Used AJAX for asynchronously exchanging small amount of data with the server behind the scenes and updating the jsp page.</li>
+		<li>Spring framework is used to implement Inversion of Control (IOC) and Model View Controller (MVC).</li>
+		<li>Developed user management screens using AngularJS business components.</li>
+		<li>Worked extensively on Web Services (SOAP & REST), XML, JMS and Spring Controller.</li>
+		<li>Used AJAX (JQuery) to display data using asynchronous calls.</li>
+		<li>REST (JAX-RS) web services have been developed to be consumed by middleware module to push the communication center messages into web module.</li>
+		<li>Extensively used Java Collections framework for backend services and to display view on frontend.</li>
+		<li>Deploying, managing, and operating scalable, highly available, and fault tolerant systems on AWS.</li>
+		<li>Developed single page applications using AngularJS.</li>
+		<li>Developed reusable custom directives using AngularJS using transclude, restrict, event handlers and templating .</li>
+		<li>Leveraged two way data binding through scope in applications built on AngularJS.</li>
+		<li>Worked on Rest API calls and integrated with UI.</li>
+		<li>Used Bootstrap for Responsive Web design.</li>
+	</ul>
+	<p><b>ENVIRONMENT:</b></p><span>Java/J2EE, JavaScript, AJAX, AngularJS,NodeJS, Grunt, Bootstrap, SOAP, REST, XML, JSON, MEAN Stack,Commons Lang, Log4j,JDBC Template, MongoDB,  MVC, Eclipse,Linux</span>
+	<p><b>Axis Bank, INDIA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;July 2009 - Nov 2011</b></p>
+	<p><b>Software Developer</b></p>
+	<p><b>RESPONSIBILITES:</b></p>
+	<ul>
+		<li>Developed various product applications using Java/J2EE and Front end technologies.</li>
+		<li>Developed UI using HTML 5, Bootstrap, Jquery, and JSP for interactive cross browser functionality and complex user interface.</li>
+		<li>Involved in various phases of Software Development Life cycle (SDLC) of the application like requirement gathering, Design, Analysis and code development.</li>
+		<li>Integrating the front end UI to the back end using Spring MVC framework.</li>
+		<li>Used JQuery to select and manipulate HTML elements and also CSS manipulation.</li>
+		<li>Used JSTL and wrote custom Spring JSP tag libraries and implemented user based handling in JSP pages.</li>
+		<li>Used AJAX for asynchronously exchanging small amount of data with the server behind the scenes and updating the jsp page.</li>
+		<li>Spring framework is used to implement Inversion of Control (IOC) and Model View Controller (MVC).</li>
+		<li>Developed user management screens using AngularJS business components.</li>
+		<li>Worked extensively on Web Services (SOAP & REST), XML, JMS and Spring Controller.</li>
+		<li>Used AJAX (JQuery) to display data using asynchronous calls.</li>
+		<li>REST (JAX-RS) web services have been developed to be consumed by middleware module to push the communication center messages into web module.</li>
+		<li>Extensively used Java Collections framework for backend services and to display view on frontend.</li>
+		<li>Deploying, managing, and operating scalable, highly available, and fault tolerant systems on AWS.</li>
+		<li>Developed single page applications using AngularJS.</li>
+	</ul>
+	<p><b>ENVIRONMENT:</b></p><span>Java/J2EE, JavaScript, AJAX, AngularJS,NodeJS, Grunt, Bootstrap, SOAP, REST, XML, JSON, MEAN Stack,Commons Lang, Log4j,JDBC Template, MongoDB,  MVC, Eclipse,Linux</span>
+</body>
+
+</html>
