--- a/hw15/hw15.html
+++ b/hw15/hw15.html
@@ -6,11 +6,11 @@
  
  </head>
  <body>
- <div><h1> jquery basics <br> applied background colors using selectors in $ tags</h2></div>
+ <div><h1> WELCOME TO JQUERY <br> SUNIL </h1></div>
  <div> 
- <p>used $ applied background colour</p>
+ <p>REDDY</p>
   </div>
- <p>this is paragraph 1 which background colour only for para tags, is applied using jquery</p>
+ <p>KOTTALA SUNIL REDDY</p>
  
      <script>
  			$('div').css('background-color','yellow');
