--- a/hw15/hw15.html
+++ b/hw15/hw15.html
@@ -17,6 +17,18 @@
  
  			$('p').css('background-color','blue');		
  			$('div p').css('background-color','red');	
+
+
+ 			$(document).ready(function() {
+				 // executes when HTML-Document is loaded and DOM is ready
+				 alert("document is ready");
+				});
+
+
+				$(window).load(function() {
+				 // executes when complete page is fully loaded, including all frames, objects and images
+				 alert("window is loaded");
+				});
      </script>
  </body>
  </html>
